--- a/style.css
+++ b/style.css
@@ -142,3 +142,10 @@ section {
   width: 100%;
   height: 100%;
 }
+
+.about {
+  display: grid;
+  grid-template-rows: minmax(1fr, 300px);
+  background: var(--mardi-gras-950);
+  filter: brightness(-10%);
+}
