--- a/style.css
+++ b/style.css
@@ -25,20 +25,26 @@
   --koromiko-900: #7e3410;
   --koromiko-950: #441906;
 
-  --mardi-gras-50: #fef4ff;
-  --mardi-gras-100: #fde7ff;
-  --mardi-gras-200: #fccfff;
-  --mardi-gras-300: #fca8ff;
-  --mardi-gras-400: #fb75fd;
-  --mardi-gras-500: #f241f4;
-  --mardi-gras-600: #d920d9;
-  --mardi-gras-700: #b417b0;
-  --mardi-gras-800: #93158e;
-  --mardi-gras-900: #781772;
-  --mardi-gras-950: #32012f;
+  --mardi-gras-50: #fdf6fd;
+  --mardi-gras-100: #f9edfa;
+  --mardi-gras-200: #f2daf4;
+  --mardi-gras-300: #eabceb;
+  --mardi-gras-400: #dd94de;
+  --mardi-gras-500: #ca6acb;
+  --mardi-gras-600: #ae4bad;
+  --mardi-gras-700: #903b8e;
+  --mardi-gras-800: #763273;
+  --mardi-gras-900: #622d5f;
+  --mardi-gras-950: #2c0e2a;
 
   --color-base: var(--mardi-gras-950);
   --text-color-base: var(--shark-50);
+  --btn-background-base: linear-gradient(
+    to bottom,
+    var(--koromiko-500),
+    var(--koromiko-600)
+  );
+  --btn-color-base: var(--shark-100);
 }
 
 * {
@@ -130,11 +136,11 @@ section {
 }
 
 .homepage .details .link {
-  font-size: 1.5rem;
+  font-size: 1.2rem;
   display: inline-block;
   padding: 16px 32px;
-  background: var(--koromiko-300);
-  color: var(--color-base);
+  background: var(--btn-background-base);
+  color: var(--btn-color-base);
   border-radius: 4px;
 }
 
@@ -143,9 +149,53 @@ section {
   height: 100%;
 }
 
-.about {
+#about {
+  padding: 60px 100px;
+  height: 100%;
   display: grid;
-  grid-template-rows: minmax(1fr, 300px);
-  background: var(--mardi-gras-950);
-  filter: brightness(-10%);
+  grid-template-columns: repeat(5, 1fr);
+  grid-template-rows: 1fr;
+  gap: 2rem;
+  background: color-mix(in srgb, var(--mardi-gras-950) 80%, var(--shark-950));
+}
+
+#about .title {
+  font-size: 1.75rem;
+}
+
+#about .text {
+  font-size: 1rem;
+  line-height: 1.75rem;
+  opacity: 0.75;
+}
+
+#about .text:first-child {
+  margin: 16px 0;
+}
+
+#information {
+  flex-direction: column;
+  width: 100%;
+  height: 100%;
+  background: var(--color-base);
+}
+
+#information .info {
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  gap: 2rem;
+  transform: translateY(-50%);
+}
+
+#information .info .list {
+  padding: 32px 24px;
+  padding-bottom: 16px;
+  background: var(--shark-400);
+  box-shadow: 0px 8px 45px rgba(34, 34, 34, 0.1);
+}
+
+#information .freelance {
+  text-align: center;
+  transform: translateY(50%);
 }
